--- a/app/views/kasittelija/paatos.html
+++ b/app/views/kasittelija/paatos.html
@@ -103,23 +103,23 @@
           suunnittelunäkymään</a>
       </div>
       <div class="col-md-3">
-        <div ng-show="(avustushakemus.hakemustilatunnus == 'T')">
+        <div ng-show="hakemusTarkastettu()">
           <button data-ng-click="tallennaPaatos(0)" class="pull-right btn btn-primary">Tallenna tiedot
           </button>
         </div>
-        <div ng-hide="(avustushakemus.hakemustilatunnus == 'T')">
+        <div ng-hide="hakemusTarkastettu()">
           <button data-ng-click="tallennaPaatos(0)" class="pull-right btn btn-primary" disabled>Tallenna
             tiedot
           </button>
         </div>
       </div>
       <div class="col-md-3">
-        <div ng-show="(avustushakemus.hakemustilatunnus == 'T')">
+        <div ng-show="hakemusTarkastettu()">
           <button data-ng-click="naytaPaatos()" class="pull-right btn btn-primary">
             Tallenna ja esikatsele päätös
           </button>
         </div>
-        <div ng-hide="(avustushakemus.hakemustilatunnus == 'T')">
+        <div ng-hide="hakemusTarkastettu()">
           <button data-ng-click="naytaPaatos()" class="pull-right btn btn-primary">
             Esikatsele päätös
           </button>
@@ -146,13 +146,13 @@
     <div class="row">
       <div class="col-md-6"></div>
       <div class="col-md-6">
-        <div ng-show="(avustushakemus.hakemustilatunnus == 'T' && sallittu('hyvaksy-paatos'))">
+        <div ng-show="(hakemusTarkastettu() && sallittu('hyvaksy-paatos'))">
           <button juku-varmistusdialogi varmistusotsake="Päätöksen hyväksyminen"
                   varmistusteksti="Oletko varma, että haluat hyväksyä päätöksen? Päätöksen hyväksymistä ei ole mahdollista peruuttaa ja päätöstä ei ole mahdollista muuttaa hyväksymisen jälkeen."
                   operaatio="tallennaPaatos(2)" class="pull-right btn btn-success">Tallenna ja hyväksy päätös
           </button>
         </div>
-        <div ng-hide="(avustushakemus.hakemustilatunnus == 'T') && sallittu('hyvaksy-paatos')">
+        <div ng-hide="(hakemusTarkastettu() && sallittu('hyvaksy-paatos'))">
           <button data-ng-click="tallennaPaatos(2)" class="pull-right btn btn-success" disabled>Tallenna ja hyväksy
             päätös
           </button>
