--- a/app/views/kasittelija/hakemus.html
+++ b/app/views/kasittelija/hakemus.html
@@ -4,13 +4,13 @@
       <a href="#/k/hakemukset/{{tyyppi}}"><span class='glyphicon glyphicon-circle-arrow-left'></span>Palaa hakemusten
         päänäkymään</a>
       <a href="#/k/hakemus/{{hakemus.vuosi}}/AH0/{{avustushakemusid}}/{{maksatushakemus1id}}/{{maksatushakemus2id}}"
-         ng-class="(tyyppi == 'AH0')? 'btn btn-primary' : 'btn btn-default'">Avustushakemus {{hakemus.vuosi}}</a>
+         ng-class="onAvustushakemus()? 'btn btn-primary' : 'btn btn-default'">Avustushakemus {{hakemus.vuosi}}</a>
       <a
         href="#/k/hakemus/{{hakemus.vuosi}}/MH1/{{avustushakemusid}}/{{maksatushakemus1id}}/{{maksatushakemus2id}}"
-        ng-class="(tyyppi == 'MH1')? 'btn btn-primary' : 'btn btn-default'">1. maksatushakemus {{hakemus.vuosi}}</a>
+        ng-class="onMaksatushakemus1()? 'btn btn-primary' : 'btn btn-default'">1. maksatushakemus {{hakemus.vuosi}}</a>
       <a
         href="#/k/hakemus/{{hakemus.vuosi}}/MH2/{{avustushakemusid}}/{{maksatushakemus1id}}/{{maksatushakemus2id}}"
-        ng-class="(tyyppi == 'MH2')? 'btn btn-primary' : 'btn btn-default'">2. maksatushakemus {{hakemus.vuosi}}</a>
+        ng-class="onMaksatushakemus2()? 'btn btn-primary' : 'btn btn-default'">2. maksatushakemus {{hakemus.vuosi}}</a>
     </div>
   </div>
   <div class="row">
@@ -41,11 +41,11 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-      <div ng-show="(tyyppi == 'AH0')">
+      <div ng-show="onAvustushakemus()">
         <h3>VALTIONAVUSTUKSEN KOHDE JA HAETTAVA VALTIONAVUSTUKSEN MÄÄRÄ<a href=""><span
           class='jukutooltip glyphicon glyphicon-question-sign'></span></a></h3>
       </div>
-      <div ng-hide="(tyyppi == 'AH0')">
+      <div ng-hide="onAvustushakemus()">
         <div ng-show="paatos!=null">
           <div class="row">
             <div class="col-md-12">
@@ -89,10 +89,10 @@
   </form>
   <div class="row">
     <div class="col-md-9">
-      <div ng-show="(tyyppi == 'AH0')">
+      <div ng-show="onAvustushakemus()">
         <h4>JOUKKOLIIKENTEEN VALTIONAVUSTUSHAKEMUS YHTEENSÄ:</h4>
       </div>
-      <div ng-hide="(tyyppi == 'AH0')">
+      <div ng-hide="onAvustushakemus()">
         <h4>HAETTAVAT MAKSATUKSET YHTEENSÄ:</h4>
       </div>
     </div>
@@ -102,7 +102,7 @@
       </div>
     </div>
   </div>
-  <div ng-show="(tyyppi == 'AH0')">
+  <div ng-show="onAvustushakemus()">
     <div class="row">
       <div class="col-md-12">
         <h5>Lisätietoja avustusten kohteista<a href=""><span
@@ -111,16 +111,16 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        <div ng-show="(hakemus.selite!=null)">
+        <div ng-show="seliteOlemassa()">
           <p>{{hakemus.selite}}</p>
         </div>
-        <div ng-show="(hakemus.selite==null)">
+        <div ng-hide="seliteOlemassa()">
           <p>Ei selitettä.</p>
         </div>
       </div>
     </div>
   </div>
-  <div ng-hide="(tyyppi == 'AH0')">
+  <div ng-hide="onAvustushakemus()">
     <h3>KULUTOSITTEET AJALLE {{ajankohta}}{{hakemus.vuosi}}<a href=""><span
       class='jukutooltip glyphicon glyphicon-question-sign'></span></a></h3>
   </div>
@@ -132,7 +132,7 @@
         </div>
         <div class="panel-body">
           <div class="col-md-12">
-            <div ng-show="liitteet.length > 0" class="response">
+            <div ng-show="liitteetOlemassa()" class="response">
               <div class="sel-file" ng-repeat="l in liitteet">
                 <p>
                   <a href="api/hakemus/{{hakemus.id}}/liite/{{l.liitenumero}}" target="_blank"><span
@@ -141,7 +141,7 @@
                 </p>
               </div>
             </div>
-            <div ng-show="(liitteet.length==0)">
+            <div ng-hide="liitteetOlemassa()">
               <p>Ei liitteitä.</p>
             </div>
           </div>
@@ -159,20 +159,20 @@
       <h5>Päivämäärä</h5>
 
       <p
-        ng-show="((hakemus.hakemustilatunnus == 'K' || hakemus.hakemustilatunnus == 'T0') && (hakemus.muokkaaja!=null))">
+        ng-show="(hakemusKeskenerainen() && (hakemus.muokkaaja!=null))">
         {{hakemus.muokkausaika |
         date:'dd.MM.yyyy'}}</p>
 
-      <p ng-hide="(hakemus.hakemustilatunnus == 'K' || hakemus.hakemustilatunnus == 'T0')">{{hakemus.lahetysaika |
+      <p ng-hide="hakemusKeskenerainen()">{{hakemus.lahetysaika |
         date:'dd.MM.yyyy'}}</p>
     </div>
     <div class="col-md-6">
-      <h5 ng-show="(hakemus.hakemustilatunnus == 'K' || hakemus.hakemustilatunnus == 'T0')">Viimeisin muokkaaja</h5>
-      <h5 ng-hide="(hakemus.hakemustilatunnus == 'K' || hakemus.hakemustilatunnus == 'T0')">Hakija</h5>
+      <h5 ng-show="hakemusKeskenerainen()">Viimeisin muokkaaja</h5>
+      <h5 ng-hide="hakemusKeskenerainen()">Hakija</h5>
 
-      <p ng-show="(hakemus.hakemustilatunnus == 'K' || hakemus.hakemustilatunnus == 'T0')">{{hakemus.muokkaaja}}</p>
+      <p ng-show="hakemusKeskenerainen()">{{hakemus.muokkaaja}}</p>
 
-      <p ng-hide="(hakemus.hakemustilatunnus == 'K' || hakemus.hakemustilatunnus == 'T0')">{{hakemus.lahettaja}}</p>
+      <p ng-hide="hakemusKeskenerainen()">{{hakemus.lahettaja}}</p>
     </div>
   </div>
   <div class="row">
@@ -181,22 +181,22 @@
         päänäkymään</a>
     </div>
     <div ng-show="sallittu('kasittely-hakemus')" class=" col-md-6">
-      <button ng-show="(hakemus.hakemustilatunnus == 'V' || hakemus.hakemustilatunnus == 'TV')"
+      <button ng-show="hakemusVireilla()"
               juku-varmistusdialogi varmistusotsake="Hakemuksen tarkastaminen"
               varmistusteksti="Oletko varma, että hakuat merkitä hakemuksen tarkastetuksi? Hakemuksen tarkastettu-merkintää ei ole mahdollista peruuttaa ja hakemuksen sisältöä ei ole mahdollista muuttaa tarkastamisen jälkeen."
               operaatio="tarkastaHakemus()"
               class="pull-right btn btn-success">Merkitse tarkastetuksi
       </button>
-      <button ng-show="(hakemus.hakemustilatunnus == 'V' || hakemus.hakemustilatunnus == 'TV')"
+      <button ng-show="hakemusVireilla()"
               data-ng-click="taydennyspyynto()"
               class="pull-right btn btn-danger">Palauta täydennettäväksi
       </button>
-      <button ng-hide="(hakemus.hakemustilatunnus == 'V' || hakemus.hakemustilatunnus == 'TV')"
+      <button ng-hide="hakemusVireilla()"
               data-ng-click="tarkastaHakemus()"
               class="pull-right btn btn-success" disabled>Merkitse
         tarkastetuksi
       </button>
-      <button ng-hide="(hakemus.hakemustilatunnus == 'V' || hakemus.hakemustilatunnus == 'TV')"
+      <button ng-hide="hakemusVireilla()"
               data-ng-click="taydennyspyynto()"
               class="pull-right btn btn-danger" disabled>Palauta täydennettäväksi
       </button>
