LIVIJUKU-305 Tilojen värikoodauksen muuttaminen

--- a/app/scripts/components/hakemusLabel/index.html
+++ b/app/scripts/components/hakemusLabel/index.html
@@ -1,12 +1,12 @@
 <ng-switch on="tila">
-  <span ng-switch-when="K" class="label label-warning">Keskeneräinen</span>
-  <span ng-switch-when="V" class="label label-danger">Vireillä</span>
-  <span ng-switch-when="T" class="label label-success">Tarkastettu</span>
-  <span ng-switch-when="T0" class="label label-info">Täydennettävänä</span>
-  <span ng-switch-when="TV" class="label label-danger">Täydennetty</span>
-  <span ng-switch-when="P" class="label label-success">Päätetty</span>
-  <span ng-switch-when="M" class="label label-default">Maksettu</span>
-  <span ng-switch-when="0" class="label label-default">Ei käynnissä</span>
-  <span ng-switch-when="FEK" class="label label-default">Ei käynnissä</span>
+  <span ng-switch-when="K" class="label hakemus-tila-keskenerainen">Keskeneräinen</span>
+  <span ng-switch-when="V" class="label hakemus-tila-vireilla">Vireillä</span>
+  <span ng-switch-when="T" class="label hakemus-tila-tarkastettu">Tarkastettu</span>
+  <span ng-switch-when="T0" class="label hakemus-tila-taydennettavana">Täydennettävänä</span>
+  <span ng-switch-when="TV" class="label hakemus-tila-taydennetty">Täydennetty</span>
+  <span ng-switch-when="P" class="label hakemus-tila-paatetty">Päätetty</span>
+  <span ng-switch-when="M" class="label hakemus-tila-maksettu">Maksettu</span>
+  <span ng-switch-when="0" class="label hakemus-tila-eikaynnissa">Ei käynnissä</span>
+  <span ng-switch-when="FEK" class="label hakemus-tila-eikaynnissa">Ei käynnissä</span>
   <span ng-switch-default class="label label-default">Unknown</span>
 <ng-switch />
