--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -112,6 +112,30 @@ textarea
 .hidden-file-input
   display: none !important
 
+.hakemus-tila-eikaynnissa
+  background-color: #777
+
+.hakemus-tila-keskenerainen
+  background-color: #f0ad4e
+
+.hakemus-tila-vireilla
+  background-color: #337ab7
+
+.hakemus-tila-taydennettavana
+  background-color: #f0ad4e
+
+.hakemus-tila-taydennetty
+  background-color: #337ab7
+
+.hakemus-tila-tarkastettu
+  background-color: #337ab7
+
+.hakemus-tila-paatetty
+  background-color: #5cb85c
+
+.hakemus-tila-maksettu
+  background-color: #5cb85c
+
 .hakemuskausi-file-upload
   color: #fff
   background-color: #337ab7
