--- a/app/views/kasittelija/hakemussummary.html
+++ b/app/views/kasittelija/hakemussummary.html
@@ -2,31 +2,31 @@
 <div ng-show="hakemus.kaynnissa">
   <p>
   <div class="col-md-3 text-center">{{hakemus.tilat.K}}/{{hakemus.total}}</div>
-  <div class="col-md-9 text-left"><span class="label label-default">Keskeneräinen</span></div>
+  <div class="col-md-9 text-left"><span class="label hakemus-tila-keskenerainen">Keskeneräinen</span></div>
   </p>
 
   <p>
   <div class="col-md-3 text-center">{{hakemus.tilat.V}}/{{hakemus.total}}</div>
-  <div class="col-md-9 text-left"><span class="label label-danger">Vireillä</span></div>
+  <div class="col-md-9 text-left"><span class="label hakemus-tila-vireilla">Vireillä</span></div>
   </p>
 
   <p>
   <div class="col-md-3 text-center">{{hakemus.tilat.T0}}/{{hakemus.total}}</div>
-  <div class="col-md-9 text-left"><span class="label label-default">Täydennettävänä</span></div>
+  <div class="col-md-9 text-left"><span class="label hakemus-tila-taydennettavana">Täydennettävänä</span></div>
   </p>
 
   <p>
   <div class="col-md-3 text-center">{{hakemus.tilat.TV}}/{{hakemus.total}}</div>
-  <div class="col-md-9 text-left"><span class="label label-danger">Täydennetty</span></div>
+  <div class="col-md-9 text-left"><span class="label hakemus-tila-taydennetty">Täydennetty</span></div>
   </p>
 
   <p>
   <div class="col-md-3 text-center">{{hakemus.tilat.T}}/{{hakemus.total}}</div>
-  <div class="col-md-9 text-left"><span class="label label-success">Tarkastettu</span></div>
+  <div class="col-md-9 text-left"><span class="label hakemus-tila-tarkastettu">Tarkastettu</span></div>
   </p>
 
   <p>
   <div class="col-md-3 text-center">{{hakemus.tilat.P}}/{{hakemus.total}}</div>
-  <div class="col-md-9 text-left"><span class="label label-primary">Päätetty</span></div>
+  <div class="col-md-9 text-left"><span class="label hakemus-tila-paatetty">Päätetty</span></div>
   </p>
 </div>
