--- a/app/scripts/views/hakija/hakemus.html
+++ b/app/scripts/views/hakija/hakemus.html
@@ -68,7 +68,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h3>PERUSTIEDOT <span class="label tilaeikaynnissa">jjjjj</span></h3>
+        <h3>PERUSTIEDOT</h3>
       </div>
     </div>
 
