--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -1,4 +1,8 @@
 @import './loading-bar.css'
+@import '../scripts/components/tab'
+@import '../scripts/components/table'
+@import '../scripts/components/panel'
+@import '../scripts/components/badge'
 @import '../scripts/components/header'
 @import '../scripts/components/sidebar'
 @import '../scripts/components/footer'
